fix: menu spacing

--- a/resources/style.css
+++ b/resources/style.css
@@ -239,7 +239,8 @@ body {
     top: 0;
     height: 50px;
     width: 100%;
-    padding: 0 10px;
+    padding: 0 20px;
+    gap: 20px;
     z-index: 2;
     font-size: 19px;
     margin-bottom: 0;
@@ -253,7 +254,6 @@ body {
 
 .menu *:not(div) {
     box-sizing: border-box;
-    padding: 0 10px;
     color: #ffffff99;
 }
 
@@ -274,7 +274,7 @@ body {
 .menu img {
     width: initial;
     height: 50px;
-    padding: 16px 10px 16px 10px;
+    padding: 16px 0px;
     margin: 0px;
     cursor: pointer;
 }
@@ -903,6 +903,9 @@ table td, th {
     margin: initial;
     max-width: initial;
     object-fit: fill;
+    width: 14px;
+    height: 14px;
+    transform: translateY(1px);
 }
 
 @media (prefers-color-scheme: light) {.icon {filter: initial;}}
